# travel_agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yaml
backend/app/: main.py
backend/app/api/: destination.py  flight.py  hotels.py  team.py
backend/app/core/: config.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/.next/: trace
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @radix-ui.js  @swc.js  @ungap.js  aria-hidden.js  asynckit.js  axios.js  bail.js  call-bind-apply-helpers.js  ccount.js  character-entities.js  class-variance-authority.js  clsx.js  combined-stream.js  comma-separated-tokens.js  debug.js  decode-named-character-reference.js  delayed-stream.js  dequal.js  devlop.js  dunder-proto.js  es-define-property.js  es-errors.js  es-object-atoms.js  es-set-tostringtag.js  escape-string-regexp.js  (+91 more)
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chat-interface.tsx  message-renderer.tsx  mobile-sidebar.tsx  sidebar.tsx  travel-settings.tsx
frontend/contexts/: agent-context.tsx  travel-context.tsx
frontend/services/: api-service.tsx
src/agents/: agent_utils.py  destination_agent.py  flight_agent.py  hotels_agent.py  team_agent.py
src/prompts/: agents_prompts.py
src/tools/: destination_tools.py  hotels_tools.py  search_flights.py
src/utils/: help.py
tests/: hello_test.py
(+193 files in other folders)
